Fix cursor not showing up

--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -9,7 +9,6 @@
 		left: 0;
 		display: block;
 		pointer-events: none;
-    opacity: 0;
     z-index: 100000;
   }
 }
